test/errors/error12.vult

fun foo() {
   val x : array(tuple(int, int), 3);
}
